--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.lego.creatures": "0.0.6-preview",
     "com.lego.minifig": "1.2.0",
     "com.lego.modelimporter": "0.10.1",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "2.0.1",
     "com.unity.feature.development": "1.0.1",
